# Adlist-Parser

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: sonar.yml
adparser/: __init__.py  __main__.py  cli.py  constants.py  content.py  fetcher.py  io.py  models.py  redundancy.py  reporting.py  status.py
data/: adlists.json  blacklist.txt  whitelist.txt  whitelists.json
docs/: pi-hole-formats.md
output/: whitelist.txt
tests/: conf_test.py  test_cli.py  test_content.py  test_io_and_fetcher.py  test_main_entrypoint.py  test_redundancy.py
