[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adlist-parser"
version = "1.0.0"
description = "Fetch, normalize and merge adlists into domain-only outputs for DNS blockers"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Toomas633" }]
keywords = ["adblock", "pi-hole", "adguard", "domains", "filter", "abp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Toomas633/Adlist-Parser"

[project.scripts]
adlist-parser = "adparser.cli:main"
test = "pytest:console_main"
pylint = "pylint:run_pylint"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.1", "coverage[toml]>=7.5", "pylint>=3.2"]

[tool.setuptools]
packages = ["adparser"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --maxfail=1 --cov=adparser --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["adparser"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"
